name:           timeout
version:        0.1
synopsis:       Monad transformer wrapping computations in a (ticklable) timeout
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Control
cabal-version:  >= 1.6
homepage:       http://github.com/duairc/timeout
bug-reports:    http://github.com/duairc/timeout/issues
build-type:     Simple

extra-source-files:
  CONTRIBUTORS

Library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Monad.Timeout
    Control.Monad.Trans.Timeout

  build-depends:
    base >= 4 && < 5,
    layers >= 1.0 && < 1.1,
    mmorph >= 1.0 && < 1.1,
    stm >= 2.2.0.1 && < 2.5,
    transformers >= 0.2.1 && < 0.6

  ghc-options:
    -Wall

  if impl(ghc < 7)
    cpp-options: -DINLINABLE=INLINE

  if impl(ghc >= 7.10)
    cpp-options: -DOverlapPragma -DOverlappingInstances=NoImplicitParams
